--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                                     </p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-info">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -92,7 +92,7 @@
 
                                     </p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-info">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -111,7 +111,7 @@
 
                                     </p>
                                     <h1>$420</h1>
-                                    <div class="btn btn-info">Buy Now</div>
+                                    <div class="btn panda-btn-buy-now">Buy Now</div>
                                 </div>
                             </div>
                             <div class="col-lg-5">
@@ -181,7 +181,7 @@
                             <h3>$ 120</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-info">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -195,7 +195,7 @@
                             <h3>$ 320</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-info">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                             <h3>$ 350</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-info">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                             <h3>$ 120</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-info">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                             <h3>$ 320</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-info">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
                             <h3>$ 169</h3>
                         </div>
                         <div class="m-3">
-                            <div class="btn btn-info">Buy Now</div>
+                            <div class="btn panda-btn-buy-now">Buy Now</div>
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                     <div class="mb-2">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-info text-white">Submit</button>
+                    <button type="submit" class="btn panda-btn-buy-now text-white">Submit</button>
                 </form>
             </div>
         </section>
